--- a/index.html
+++ b/index.html
@@ -44,11 +44,14 @@
     <title>Studio Foto Adda</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg sticky-top navbar-light">
+    <nav class="navbar navbar-expand-lg sticky-top navbar-light navbar-custom">
       <div class="container">
         <a class="navbar-brand logo-link" href="#">
           <img src="images/logo.svg" alt="Logo Studio Foto Adda" width="50" />
-          <span class="logo-text"> Studio Foto Adda </span>
+          <div class="d-flex flex-column">
+            <span class="logo-text"> Studio Foto Adda </span>
+            <small class="logo-subtext">Servicii Foto Profesionale</small>
+          </div>
         </a>
         <button
           class="navbar-toggler"
@@ -105,7 +108,11 @@
           <div class="col-lg-6 d-flex flex-column align-items-center">
             <div class="image-container">
               <div class="position-relative">
-                <img src="images/header.png" alt="" class="img-fluid" />
+                <img
+                  src="images/header_image.jpg"
+                  alt=""
+                  class="img-fluid header-image"
+                />
                 <a
                   class="video-btn"
                   data-bs-toggle="modal"
