--- a/index.html
+++ b/index.html
@@ -91,10 +91,15 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="mt-6">
-              <h1 class="xl-text">Studio Foto Adda</h1>
-              <p class="lead mb-4">
-                We specialize in transforming office spaces into inspiring and
-                functional environments. Let us bring your vision to life.
+              <h1 class="md-text header-h1">
+                Studio Foto pentru nunți, botezuri și evenimente speciale Galați
+              </h1>
+              <p class="lead mb-4 header-p">
+                Fiecare moment are o poveste unică, iar noi suntem aici să o
+                surprindem cu grijă, atenție și pasiune în fotografii
+                memorabile. Fotografii profesionale pentru nunți, botezuri și
+                orice alt eveniment special, realizate exact așa cum îți
+                dorești.
               </p>
               <a href="#introduction" class="btn btn-primary btn-lg m-2">
                 Află mai mult
