--- a/index.html
+++ b/index.html
@@ -707,6 +707,7 @@
                   type="text"
                   class="form-control"
                   id="name"
+                  name="name"
                   placeholder="Ex: Andrei Popescu"
                   required
                 />
@@ -718,6 +719,7 @@
                   type="email"
                   class="form-control"
                   id="email"
+                  name="email"
                   placeholder="Ex: andrei@email.com"
                   required
                 />
@@ -738,7 +740,13 @@
                 <label for="date" class="form-label"
                   >Data estimativă a evenimentului / ședinței foto</label
                 >
-                <input type="date" class="form-control" id="date" required />
+                <input
+                  type="date"
+                  name="date"
+                  class="form-control"
+                  id="date"
+                  required
+                />
               </div>
 
               <div class="mb-3">
@@ -748,6 +756,7 @@
                 <input
                   type="text"
                   class="form-control"
+                  name="location"
                   id="location"
                   placeholder="Ex: Restaurant Royal Galați"
                 />
@@ -757,7 +766,12 @@
                 <label for="service" class="form-label"
                   >Ce tip de servicii vă interesează?</label
                 >
-                <select class="form-select" id="service" required>
+                <select
+                  name="service"
+                  class="form-select"
+                  id="service"
+                  required
+                >
                   <option selected disabled value="">Alegeți o opțiune</option>
                   <option>Fotografii de nuntă</option>
                   <option>Fotografii de botez</option>
@@ -788,6 +802,7 @@
                   class="form-control"
                   id="message"
                   rows="4"
+                  name="message"
                   placeholder="Spuneți-ne mai multe despre evenimentul dvs."
                 ></textarea>
               </div>
