further form validation

--- a/index.html
+++ b/index.html
@@ -732,6 +732,7 @@
                   type="tel"
                   class="form-control"
                   id="phone"
+                  name="phone"
                   placeholder="Ex: 07xx xxx xxx"
                 />
                 <div class="mt-1 validation-error display-none">
