--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <img
         src="images/photographer.png"
         alt=""
-        class="decoration-star-2 position-absolute"
+        class="photographer-decoration-1 position-absolute"
       />
       <div class="container position-relative z-3">
         <div class="row">
@@ -184,16 +184,33 @@
     </section> -->
 
     <!-- About + Our Values -->
-    <section id="introduction" class="intro bg-light py-6">
+    <section
+      id="about-our-values"
+      class="intro bg-light py-6 position-relative overflow-hidden"
+    >
+      <img
+        src="images/photographer.png"
+        alt=""
+        class="photographer-decoration-2 position-absolute"
+      />
       <div class="container">
         <div class="row">
           <div class="col-lg-8 offset-lg-2 text-center">
             <h2>Despre Studio Foto Adda</h2>
-            <p class="fs-5">
-              At our company, designing office spaces is our passion. We take
-              pride in our completed projects that reflect our dedication and
-              expertise in creating functional and aesthetically pleasing work
-              environments.
+            <p class="fs-5 about-paragraph">
+              La Studio Foto Adda, transformăm momentele speciale în amintiri de
+              neuitat. Cu o pasiune autentică pentru fotografie și o experiență
+              solidă în domeniu, surprindem emoția, eleganța și spontaneitatea
+              fiecărui eveniment – de la nunți și botezuri, până la aniversări
+              și alte ocazii importante din viața ta.
+            </p>
+            <p class="fs-5 about-paragraph">
+              Credem că fiecare poveste merită să fie spusă prin imagini care să
+              dăinuie peste ani, iar echipa noastră dedicată se asigură că
+              fiecare cadru reflectă frumusețea și autenticitatea clipelor
+              trăite. Alegând Studio Foto Adda, alegi profesionalism,
+              creativitate și o amintire vizuală care îți va rămâne mereu
+              aproape de suflet.
             </p>
           </div>
         </div>
@@ -205,50 +222,92 @@
       id="details"
       class="details position-relative my-6 overflow-hidden"
     >
-      <img
-        src="images/photographer.png"
-        alt=""
-        class="decoration-star position-absolute"
-      />
       <div class="container position-relative z-3">
         <div class="row">
-          <div class="col-lg-6">
+          <div
+            class="col-lg-6 d-flex justify-content-center align-items-center"
+          >
             <div class="image-container d-flex justify-content-center">
-              <img src="images/details-1.png" alt="" class="img-fluid" />
+              <img
+                src="images/our_values_image.jpg"
+                alt=""
+                class="img-fluid our-values-image"
+              />
             </div>
           </div>
           <div class="col-lg-6">
             <div class="mt-4">
               <h2 class="mb-4">Valorile noastre</h2>
+              <p>
+                La Studio Foto Adda, credem că valorile noastre sunt fundamentul
+                unui serviciu de calitate și al unei relații de încredere cu
+                fiecare client. Aceste valori ne definesc și ne ajută să oferim
+                o experiență memorabilă fiecărui eveniment pe care îl
+                surprindem.
+              </p>
               <ul class="list-unstyled">
                 <li class="d-flex mb-3">
-                  <i class="fas fa-check text-primary fa-2x mx-4"></i>
-                  <p>
-                    Our approach ensures that every office space is tailored to
-                    the unique needs and preferences of our clients. No two
-                    spaces look the same.
+                  <i class="fas fa-camera text-primary fa-2x mx-4"></i>
+                  <p class="our-values-paragraph">
+                    <b>Profesionalism</b>
+                    La Studio Foto Adda, ne dedicăm fiecărui detaliu al
+                    evenimentului tău, asigurându-ne că atingem standardele
+                    noastre de înaltă calitate. Pentru noi, fiecare proiect este
+                    o oportunitate de a arăta ce înseamnă cu adevărat pasiunea
+                    pentru fotografie.
                   </p>
                 </li>
                 <li class="d-flex mb-3">
-                  <i class="fas fa-check text-primary fa-2x mx-4"></i>
-                  <p>
-                    We pay attention to every detail, ensuring that the design
-                    elements, furniture, and decor create a harmonious and
-                    inspiring atmosphere.
+                  <i class="fas fa-camera text-primary fa-2x mx-4"></i>
+                  <p class="our-values-paragraph">
+                    <b>Punctualitate</b>
+                    Știm cât de importante sunt momentele speciale și că timpul
+                    este esențial. De aceea, ne angajăm să fim întotdeauna la
+                    timp și pregătiți, pentru ca tu să te poți bucura de
+                    evenimentul tău fără nicio grijă legată de fotografie.
                   </p>
                 </li>
                 <li class="d-flex mb-3">
-                  <i class="fas fa-check text-primary fa-2x mx-4"></i>
-                  <p>
-                    Our team of experts guarantees that your office space will
-                    be a reflection of your brand identity and company culture.
+                  <i class="fas fa-camera text-primary fa-2x mx-4"></i>
+                  <p class="our-values-paragraph">
+                    <b>Atenție la detalii</b>
+                    Fiecare detaliu contează! De la pregătirea locației până la
+                    capturarea celor mai intime și autentice momente, suntem
+                    mereu atenți la fiecare aspect al evenimentului pentru a ne
+                    asigura că fiecare fotografie spune o poveste completă.
                   </p>
                 </li>
                 <li class="d-flex mb-3">
-                  <i class="fas fa-check text-primary fa-2x mx-4"></i>
-                  <p>
-                    Existence as discourse is. Pleasure friendly at marriage
-                    blessing or should
+                  <i class="fas fa-camera text-primary fa-2x mx-4"></i>
+                  <p class="our-values-paragraph">
+                    <b>Creativitate</b>
+                    În fiecare fotografie aducem un strop de creativitate,
+                    începând cu idei inovative și ajungând până la compoziții
+                    care reflectă personalitatea și atmosfera fiecărui
+                    eveniment. Ne place să surprindem momentele unice și să le
+                    transformăm în amintiri vizuale memorabile.
+                  </p>
+                </li>
+                <li class="d-flex mb-3">
+                  <i class="fas fa-camera text-primary fa-2x mx-4"></i>
+                  <p class="our-values-paragraph">
+                    <b>Discreție</b>
+                    Înțelegem importanța de a nu perturba fluxul evenimentului.
+                    Fiecare membru al echipei noastre respectă intimitatea
+                    clienților, surprinzând momentele speciale fără a interveni
+                    sau a se face remarcat astfel încât evenimentul să se
+                    desfășoare natural.
+                  </p>
+                </li>
+                <li class="d-flex mb-3">
+                  <i class="fas fa-camera text-primary fa-2x mx-4"></i>
+                  <p class="our-values-paragraph">
+                    <b>Pasiune pentru fotografie</b>
+                    Suntem profund pasionați de ceea ce facem. Fiecare
+                    fotografie este unică și reprezintă pentru noi o
+                    oportunitate de a pune în valoare momentele emoționante care
+                    fac viața mai frumoasă. Acest entuziasm se reflectă în
+                    fiecare serviciu pe care îl oferim.
                   </p>
                 </li>
               </ul>
