--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <title>Studio Foto Adda</title>
   </head>
   <body>
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg sticky-top navbar-light navbar-custom">
       <div class="container">
         <a class="navbar-brand logo-link" href="#">
@@ -67,13 +68,18 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Acasă</a>
+              <a class="nav-link" aria-current="page" href="index.html"
+                >Acasă</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#details">Servicii</a>
+              <a class="nav-link" href="services.html">Servicii</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#services">Contact</a>
+              <a class="nav-link" href="portfolio.html">Portofoliu</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -101,7 +107,7 @@
                 orice alt eveniment special, realizate exact așa cum îți
                 dorești.
               </p>
-              <a href="#introduction" class="btn btn-primary btn-lg m-2">
+              <a href="#about-our-values" class="btn btn-primary btn-lg m-2">
                 Află mai mult
               </a>
               <a
@@ -311,7 +317,17 @@
                   </p>
                 </li>
               </ul>
-              <a href="article.html" class="btn btn-primary">Contactați-ne</a>
+              <a href="portfolio.html" class="btn btn-primary btn-lg m-2"
+                >Vedeți portofoliul</a
+              >
+              <a
+                href="#contact"
+                class="btn btn-outline-secondary btn-lg m-2"
+                data-bs-toggle="modal"
+                data-bs-target="#studio-foto-modal"
+              >
+                Contactați-ne
+              </a>
             </div>
           </div>
         </div>
